# TeXSC

./: CHANGELOG.md  Cargo.toml  README.md
src/: ast_printer.rs  config.rs  error.rs  macros.rs  main.rs  math_functions.rs  num_formatter.rs  parser.rs  str2num.rs  test.rs  tokenizer.rs  tsc_cmd.rs
src/parser/: lexer.rs
src/tsc_cmd/: gcd.rs  prime_factorize.rs
