[package]
name = "tsc"
version = "0.2.2"
authors = ["tomiy <tomiy@tomiylab.com>"]
edition = "2018"
description = "TeXSC: TeX Scientific Calculator"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tomiy-0x62/TeXSC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
dirs = "5.0.1"
regex = "1.5.5"
rustyline = "10.0.0"
serde = { version = "1.0.202",  features = ["derive"] }
text-colorizer = "1.0.0"
thiserror= "1"
toml = "0.8.13"
