[package]
name = "tsc"
version = "0.3.0"
authors = ["tomiy <tomiy@tomiylab.com>"]
edition = "2021"
description = "TeXSC: TeX Scientific Calculator"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tomiy-0x62/TeXSC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version =  "0.4", features = [ "serde-json" ] }
clap = "4.5.30"
dirs = "6"
num-traits = "0.2.19"
regex = "1.5.5"
rustyline = "15"
serde = { version = "1.0.202",  features = ["derive"] }
text-colorizer = "1.0.0"
thiserror= "2"
toml = "0.8.13"
